# tools-33

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  Sidebar.tsx  SplashScreen.tsx  TitleBar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu_scaler.rs  image_scaler.rs  lib.rs  main.rs  pdf_compress.rs  pdf_converter.rs  pdf_merge.rs  system_info.rs
src/components/: InfoCard.tsx
src/components/magazine/: AlertModal.tsx  DistributionInfo.tsx  EmptyState.tsx  GeneratePdfButton.tsx  GeneratingState.tsx  LoadingState.tsx  PagesGrid.tsx  PreviewHeader.tsx  SpreadsGrid.tsx  index.ts  types.ts
src/components/texture/: BottomControls.tsx  EditableValue.tsx  ExportFormatSelector.tsx  ImageList.tsx  PaperSizeSelector.tsx  Ruler.tsx  TextureCanvas.tsx  index.ts  types.ts
src/hooks/: useMagazine.ts  usePdfConverter.ts  useSystemInfo.ts
src/screens/: ImageScalerScreen.tsx  MagazineScreen.tsx  PdfCompressScreen.tsx  PdfConverterScreen.tsx  PdfMergeScreen.tsx  QrGeneratorScreen.tsx  SystemInfoScreen.tsx  TextureGeneratorScreen.tsx
src/utils/: magazine.ts
src/workers/: imageWorker.ts
