[package]
name = "tools-33"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_33_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
  hayro = { version = "0.7", default-features = true }
  image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
  zip = "2"
  rayon = "1"
  scopeguard = "1"
  base64 = "0.22"
  png = "0.17"
  wgpu = "0.20"
  pollster = "0.4"
  lopdf = { version = "0.35", features = ["embed_image", "nom_parser"] }

